added option for large jacobians

--- a/6_Error_Propagation.ipynb
+++ b/6_Error_Propagation.ipynb
@@ -78,7 +78,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def calc_jacobian(model,spectra,denormalize=None):\n",
@@ -98,7 +100,8 @@
     "    jacobian = np.array([jf([spectra,False]) for jf in jacobian_func])[:,:,0,:,0]\n",
     "    '''\n",
     "    for i in range(len(spectra)):\n",
-    "        np.save('temp/temp_jacobian_'+str(i)+'.npy',jacobian_func([spectra[i:i+1],False])[0][:,:,0])\n",
+    "        jacobian = np.array([jf([spectra,False]) for jf in jacobian_func])[:,:,0,:,0]\n",
+    "        np.save('temp/temp_jacobian_'+str(i)+'.npy',jacobian)\n",
     "        if i%int(0.1*len(spectra))==0:\n",
     "            print('Jacobians completed: '+str(i))\n",
     "    \n",
@@ -109,7 +112,6 @@
     "            jacobian = np.concatenate((jacobian,np.load('temp/temp_jacobian_'+str(i)+'.npy')))\n",
     "        subprocess.check_output(['rm','temp/temp_jacobian_'+str(i)+'.npy'])\n",
     "    '''\n",
-    "    #jacobian = jacobian_func([spectra[i:i+1],False])#[0][:,:,0]\n",
     "    return jacobian\n",
     "\n",
     "def calc_covariance(model,spectra,err_spectra,denormalize=None):\n",
