VAE markdown edits

--- a/StarNet_VAE.ipynb
+++ b/StarNet_VAE.ipynb
@@ -49,7 +49,7 @@
     "### load data\n",
     "this is file dependent\n",
     "\n",
-    "this particular function expects the dr14 h5 file to be in a similar format as that used for the StarNet DR12 analysis"
+    "this particular function expects the dr14 h5 file that can be downloaded from vos:starnet/public"
    ]
   },
   {
