--- a/VAE/StarNet_VAE.ipynb
+++ b/VAE/StarNet_VAE.ipynb
@@ -49,7 +49,7 @@
     "### load data\n",
     "this is file dependent\n",
     "\n",
-    "this particular function expects the dr14 h5 file that can be downloaded from vos:starnet/public"
+    "this particular function expects the aspcap dr14 h5 file that can be downloaded from vos:starnet/public"
    ]
   },
   {
