--- a/2_Preprocessing_of_Training_Data.ipynb
+++ b/2_Preprocessing_of_Training_Data.ipynb
@@ -81,73 +81,9 @@
      "output_type": "stream",
      "text": [
       "Dataset keys in file: \n",
-      "\n"
+      "\n",
+      "['0_FE', '0_FE_ERR', 'ALPHA_M', 'AL_FE', 'AL_FE_ERR', 'CA_FE', 'CA_FE_ERR', 'C_FE', 'C_FE_ERR', 'FE_H', 'FE_H_ERR', 'IDs', 'K_FE', 'K_FE_ERR', 'LOGG', 'LOGG_ERR', 'MG_FE', 'MG_FE_ERR', 'MN_FE', 'MN_FE_ERR', 'NA_FE', 'NA_FE_ERR', 'NI_FE', 'NI_FE_ERR', 'N_FE', 'N_FE_ERR', 'PARAM', 'SI_FE', 'SI_FE_ERR', 'S_FE', 'S_FE_ERR', 'TEFF', 'TEFF_ERR', 'TI_FE', 'TI_FE_ERR', 'VRAD', 'VRAD_ERR', 'VSCATTER', 'V_FE', 'V_FE_ERR', 'aspcap_flag', 'bluegreen_persist', 'error_spectrum', 'greenred_persist', 'num_visits', 'spectrum', 'stacked_snr', 'star_flag', 'star_flag_indiv', 'targ1_flag', 'targ2_flag', 'visit_snr']\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[u'0_FE',\n",
-       " u'0_FE_ERR',\n",
-       " u'ALPHA_M',\n",
-       " u'AL_FE',\n",
-       " u'AL_FE_ERR',\n",
-       " u'ASPCAP error_spectrum',\n",
-       " u'ASPCAP spectrum',\n",
-       " u'CA_FE',\n",
-       " u'CA_FE_ERR',\n",
-       " u'C_FE',\n",
-       " u'C_FE_ERR',\n",
-       " u'FE_H',\n",
-       " u'FE_H_ERR',\n",
-       " u'FPARAM',\n",
-       " u'IDs',\n",
-       " u'K_FE',\n",
-       " u'K_FE_ERR',\n",
-       " u'LOGG',\n",
-       " u'LOGG_ERR',\n",
-       " u'MG_FE',\n",
-       " u'MG_FE_ERR',\n",
-       " u'MN_FE',\n",
-       " u'MN_FE_ERR',\n",
-       " u'Main Sequence Flag',\n",
-       " u'NA_FE',\n",
-       " u'NA_FE_ERR',\n",
-       " u'NI_FE',\n",
-       " u'NI_FE_ERR',\n",
-       " u'N_FE',\n",
-       " u'N_FE_ERR',\n",
-       " u'PARAM',\n",
-       " u'SI_FE',\n",
-       " u'SI_FE_ERR',\n",
-       " u'S_FE',\n",
-       " u'S_FE_ERR',\n",
-       " u'TEFF',\n",
-       " u'TEFF_ERR',\n",
-       " u'TI_FE',\n",
-       " u'TI_FE_ERR',\n",
-       " u'VRAD',\n",
-       " u'VRAD_ERR',\n",
-       " u'VSCATTER',\n",
-       " u'V_FE',\n",
-       " u'V_FE_ERR',\n",
-       " u'aspcap_flag',\n",
-       " u'bluegreen_persist',\n",
-       " u'error_spectrum',\n",
-       " u'greenred_persist',\n",
-       " u'num_visits',\n",
-       " u'spectrum',\n",
-       " u'stacked_snr',\n",
-       " u'star_flag',\n",
-       " u'star_flag_indiv',\n",
-       " u'targ1_flag',\n",
-       " u'targ2_flag',\n",
-       " u'visit_snr']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -155,7 +91,7 @@
     "\n",
     "F = h5py.File(filename,'r')\n",
     "print('Dataset keys in file: \\n')\n",
-    "F.keys()"
+    "print(list(F.keys()))"
    ]
   },
   {
@@ -324,11 +260,8 @@
    ],
    "source": [
     "savename = 'training_data.h5'\n",
-    "# if path already exist, you must remove it first using os.remove(path) \n",
-    "#os.remove(datadir + savename)\n",
-    "dt = h5py.special_dtype(vlen=bytes)\n",
     "\n",
-    "with h5py.File(datadir + savename, \"a\") as f:\n",
+    "with h5py.File(datadir + savename, \"w\") as f:\n",
     "    \n",
     "    # Create datasets for your reference data file \n",
     "    spectra_ds = f.create_dataset('spectrum', (1,7214), maxshape=(None,7214), dtype=\"f\", chunks=(1,7214))\n",
@@ -347,7 +280,7 @@
     "    for i in indices_ref:\n",
     "\n",
     "        spectrum = F['spectrum'][i:i+1]\n",
-    "\n",
+    "        spectrum[np.isnan(spectrum)]=0.\n",
     "\n",
     "        # NORMALIZE SPECTRUM\n",
     "        # Separate spectra into chips\n",
@@ -374,25 +307,34 @@
     "\n",
     "print(savename+' has been saved as the reference set to be used in 4_Train_Model.ipynb')  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
