updated shape in 6_errors

--- a/6_Error_Propagation.ipynb
+++ b/6_Error_Propagation.ipynb
@@ -77,16 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def calc_jacobian(model,spectra,denormalize=None):\n",
-    "    \n",
-    "    spectra = spectra.reshape(spectra.shape[0],spectra.shape[1],1)\n",
-    "    \n",
+    "        \n",
     "    if denormalize==None:\n",
     "        y_list = tf.unstack(model.output)\n",
     "    else:\n",
@@ -97,7 +95,7 @@
     "\n",
     "    jacobian_func = [K.function([model.input, K.learning_phase()], j_) for j_ in J]\n",
     "\n",
-    "    jacobian = np.array([jf([spectra,False]) for jf in jacobian_func])[:,:,0,:,0]\n",
+    "    jacobian = np.array([jf([spectra,False]) for jf in jacobian_func])[:,0,0,:]\n",
     "    '''\n",
     "    for i in range(len(spectra)):\n",
     "        jacobian = np.array([jf([spectra,False]) for jf in jacobian_func])[:,:,0,:,0]\n",
@@ -118,12 +116,12 @@
     "    jac_matrix = calc_jacobian(model,spectra,denormalize)\n",
     "    err_spectra[err_spectra > 6] = 0\n",
     "    jac_matrix = np.nan_to_num(jac_matrix)\n",
-    "    covariance = np.einsum('ijk,kjl->jil',(jac_matrix*(err_spectra**2)),jac_matrix.T)\n",
+    "    covariance = np.einsum('ij,jl->il',(jac_matrix*(err_spectra**2)),jac_matrix.T)\n",
     "    return covariance\n",
     "\n",
     "def calc_variance(model,spectra,err_spectra,denormalize=None):\n",
     "    covariance = calc_covariance(model,spectra,err_spectra,denormalize)\n",
-    "    return np.diagonal(covariance, offset=0, axis1=1, axis2=2)"
+    "    return np.diagonal(covariance, offset=0)"
    ]
   },
   {
@@ -135,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -159,18 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python2.7/site-packages/keras/models.py:288: UserWarning: Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
-      "  warnings.warn('Error in loading the saved optimizer '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = load_model(model_path)"
    ]
@@ -186,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -273,37 +262,37 @@
       "Making predictions and computing propagated variance for 300 spectra\n",
       "\n",
       "1 completed.\n",
-      "0.303670883179 seconds elapsed.\n",
+      "0.43507194519 seconds elapsed.\n",
       "\n",
       "31 completed.\n",
-      "12.9845468998 seconds elapsed.\n",
+      "17.3262429237 seconds elapsed.\n",
       "\n",
       "61 completed.\n",
-      "33.6231558323 seconds elapsed.\n",
+      "47.8530139923 seconds elapsed.\n",
       "\n",
       "91 completed.\n",
-      "62.2027180195 seconds elapsed.\n",
+      "93.3576600552 seconds elapsed.\n",
       "\n",
       "121 completed.\n",
-      "100.295346975 seconds elapsed.\n",
+      "153.251788855 seconds elapsed.\n",
       "\n",
       "151 completed.\n",
-      "146.935225964 seconds elapsed.\n",
+      "230.940063953 seconds elapsed.\n",
       "\n",
       "181 completed.\n",
-      "205.317786932 seconds elapsed.\n",
+      "327.530734062 seconds elapsed.\n",
       "\n",
       "211 completed.\n",
-      "273.865209818 seconds elapsed.\n",
+      "441.528791904 seconds elapsed.\n",
       "\n",
       "241 completed.\n",
-      "346.001633883 seconds elapsed.\n",
+      "572.318181038 seconds elapsed.\n",
       "\n",
       "271 completed.\n",
-      "432.757597923 seconds elapsed.\n",
+      "721.773078918 seconds elapsed.\n",
       "\n",
       "All 300 completed.\n",
-      "526.05489397 seconds elapsed.\n"
+      "884.853347063 seconds elapsed.\n"
      ]
     }
    ],
@@ -313,7 +302,7 @@
     "print('Making predictions and computing propagated variance for '+str(len(test_labels))+' spectra')\n",
     "time_start = time.time()\n",
     "for i in range(len(test_labels)):\n",
-    "    spectrum = test_spectra[i:i+1].reshape((1,7214,1))\n",
+    "    spectrum = test_spectra[i:i+1]\n",
     "    err_spectrum = test_err_spectra[i:i+1]\n",
     "    variance[i] = calc_variance(model,spectrum,err_spectrum,denormalize)\n",
     "    predictions[i] = denormalize(model.predict(spectrum))\n",
@@ -332,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -373,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -399,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -410,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -419,9 +408,9 @@
      "text": [
       "Mean total statistical errors: \n",
       "\n",
-      "Teff  :  35.469 K\n",
+      "Teff  :  33.947 K\n",
       "log(g):  0.076 dex\n",
-      "[Fe/H]:  0.025 dex\n"
+      "[Fe/H]:  0.024 dex\n"
      ]
     }
    ],
@@ -462,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
